*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/ant.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/ant.htm
@@ -5,24 +5,18 @@
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <TITLE>
-Contributing Ant tasks and types
+Platform Ant support
 </TITLE>
 
 <link rel="stylesheet" type="text/css" HREF="../book.css">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1>
-Contributing Ant tasks and types</H1>
-<p>Plug-ins can use <a href="arch.htm">extension points</a> to contribute new
-<a href="../reference/extension-points/org_eclipse_ant_core_antTasks.html">tasks</a> 
+<h1>Platform Ant support</h1>
+<p>Ant is a Java-based build tool that uses XML-based configuration files to
+describe build tasks.&nbsp; The Eclipse platform allows you to run Ant scripts
+from your plug-in and contribute new Ant <a href="../reference/extension-points/org_eclipse_ant_core_antTasks.html">tasks</a> 
 and <a href="../reference/extension-points/org_eclipse_ant_core_antTypes.html">
-types</a> to Eclipse.&nbsp;</p>
-<p> These tasks and types have access to all classes available 
-for the plug-in contributing them. For example, the <b>eclipse.refreshLocal</b> task 
-contributed by the <b>org.eclipse.core.resources</b> plug-in is 
-a wrapper to the
-<a href="../reference/api/org/eclipse/core/resources/IResource.html#refreshLocal(int, org.eclipse.core.runtime.IProgressMonitor)">
-<b>
-IResource.refreshLocal()</b></a> method.</p>
+types</a> using extension points.&nbsp; The rest of this discussion assumes that you have a basic
+understanding of Ant.</p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 </BODY></HTML>
