--- a/bundles/org.eclipse.platform.doc.isv/guide/ant_running_script_programmatically.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/ant_running_script_programmatically.htm
@@ -15,15 +15,14 @@ Running Ant scripts programmatically
 Running Ant scripts programmatically</H1>
 <p>
 The Ant support built into Eclipse allows plug-ins to programmatically run Ant scripts.
-This is done via the <a href="../reference/api/org/eclipse/ant/core/AntRunner.html">AntRunner</a> 
-class included in the org.eclipse.ant.core plug-in.
+This is done via the <a href="../reference/api/org/eclipse/ant/core/AntRunner.html"><b>AntRunner</b></a> 
+class included in the <b> org.eclipse.ant.core</b> plug-in.
 </p>
 
 <h2>Example</h2>
-<p>The following code snippet shows an example of how to use the AntRunner:</p>
+<p>The following code snippet shows an example of how to use the <a href="../reference/api/org/eclipse/ant/core/AntRunner.html"><b>AntRunner</b></a>:</p>
 
-<pre><code>
-import org.eclipse.ant.core.AntRunner;
+<pre><font color="#4444CC">import org.eclipse.ant.core.AntRunner;
 import org.eclipse.core.runtime.IProgressMonitor;
 
 public class Running {
@@ -31,20 +30,31 @@ public class Running {
 public static void main(String[] args) throws Exception {
 	IProgressMonitor monitor = ...
 	AntRunner runner = new AntRunner();
-	runner.setBuildFileLocation("c:/scripts/build.xml");
-	runner.setArguments("-Dmessage=Building -verbose");
+	runner.setBuildFileLocation(&quot;c:/scripts/build.xml&quot;);
+	runner.setArguments(&quot;-Dmessage=Building -verbose&quot;);
 	runner.run(monitor);
 }
-}
-</code></pre>
+}</font></pre>
+
 <p>If a progress monitor is used, it is made available for the running tasks.
 See <a href="./ant_contributing_task.htm#monitor">Progress Monitors</a> for more details.</p>
+
+<h3>
+Special care for native libraries</h3>
+<P >
+Every time an Ant script runs in Eclipse a new classloader is created. Since a library can only be
+loaded by one classloader in Java, tasks making use of native libraries could run into problems during
+multiple script runs. If the previous classloader has not been garbage collected at the time the new
+classloader tries to load the native library, an exception is thrown indicating the problem and the
+script execution fails. One way of avoiding this problem is having the library load be handled by
+a class inside a plug-in library. The task can make use of that class for accessing native
+methods. This way, the library is loaded by the plug-in classloader and it does not run into the
+load library conflict.
+</P>
+
 
 <P >
 &nbsp;</P>
 
-&nbsp;
-<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt=
-"Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border=
-"0"></a>
+<p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 </BODY></HTML>
