Debugger Doc update for 2.0

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-10.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-10.htm
@@ -15,7 +15,7 @@ To set the color and font for output to the Console view:</p>
 <ol>
   <li>
 <p CLASS="Head">
-From the menu bar, select <b>Workbench</b> &gt; <b>Preferences</b>.</li>
+From the menu bar, select <b>Window</b> &gt; <b>Preferences</b>.</li>
 <li>
 <p CLASS="Head">
 Expand the <b>Debug </b>category and select <b>Console</b>. The Console 
