--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-122.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-122.htm
@@ -11,7 +11,7 @@
 <H1 CLASS="Head">
 Overriding the default system libraries for a JRE definition</H1>
 <P CLASS="Para">
-You can override the system library and its corresponding source attachment when adding a JRE.</P>
+You can override the system libraries and the corresponding source attachments when adding a JRE.</P>
 <ol>
   <li>
 <P CLASS="Para">
@@ -20,30 +20,28 @@ Begin adding a new JRE definition.</P>
   <li>
 <P CLASS="Para">
 In the Add JRE dialog, clear the <b> <SPAN CLASS="Label">
-Use default library</SPAN></b>
+Use default system libraries</SPAN></b>
  check box.</P>
   </li>
   <li>
 <P CLASS="Para">
-If the system was able to determine default settings for the JAR and source files for the selected JRE installation, then the two corresponding fields will already be filled in.</P>
+If the system was able to determine the set of system libraries, these libraries will already be displayed.</P>
   </li>
   <li>
 <P CLASS="Para">
-Change the <b> <SPAN CLASS="Label">
-JRE JAR</SPAN></b>
- field to point to the file containing your Java system classes.</P>
+Order and/or remove the system libraries that were determined. Add external jars to the list of system libraries</P>
   </li>
   <li>
 <P CLASS="Para">
-Change the <b> <SPAN CLASS="Label">
-JRE source</SPAN></b>
- field to point to the file containing the source for the Java system classes.</P>
+Associate source with the system libraries using the <b> <SPAN CLASS="Label">
+Attach source</SPAN></b>
+ button.</P>
   </li>
   <li>
 <P CLASS="Para">
 When you are finished with this dialog, click <b> <SPAN CLASS="Label">
 OK</SPAN></b>
- to create the new JRE definition. The new JRE definition will use the customized paths for its JAR and source file locations.&nbsp;</P>
+ to create the new JRE definition. The new JRE definition will use the customized system libraries (and attached source).&nbsp;</P>
   </li>
 </ol>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
