--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-125.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-125.htm
@@ -15,7 +15,7 @@ You can delete Java runtime environment definitions that are available for execu
 <ol>
   <li>
 <P CLASS="Para">
-Select&nbsp; <b>Workbench</b> &gt; <b>Preferences </b>from the main menu bar. </P>
+Select&nbsp; <b>Window</b> &gt; <b>Preferences </b>from the main menu bar. </P>
   </li>
   <li>
 <P CLASS="Para">
@@ -29,8 +29,6 @@ Remove</SPAN></b>.</P>
   <li>
 <P CLASS="Para">
 Check the box for the definition that you want to use as the default JRE for the workbench.</P>
-<P CLASS="Para">
-The values of the three reserved class path variables (JRE_LIB, JRE_SRC, and JRE_SRCROOT) are displayed. These values are set automatically depending on the JRE you select.</P>
   </li>
 </ol>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
