--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-131.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-131.htm
@@ -11,11 +11,7 @@
 <H1 CLASS="Head">
 Relaunching a program</H1>
 <P CLASS="Para">
-The workbench keeps a history of each launched and debugged program.
-The <b> <SPAN CLASS="Label">
-Run</SPAN></b>
- and <b> <SPAN CLASS="Label">
-Debug</SPAN></b> button menus contain lists of previous launches. To relaunch, 
+The workbench keeps a history of each launched and debugged program. To relaunch, 
 do one of the following:</P>
 <ul>
   <li>
@@ -24,7 +20,11 @@ Select a previous launch from <b>Run</b> or <b>Debug</b> button pull-down menus.
   </li>
   <li>
 <P CLASS="Para">
-In the Processes view, select a process that you want to relaunch, and select <b>
+From the menu bar, select <b>Run</b> &gt; <b>Run History</b> or <b>Run</b> &gt; <b>Debug History</b> and select a previous launch from these sub-menus.</P>
+  </li>
+  <li>
+<P CLASS="Para">
+In the Debug view, select a process that you want to relaunch, and select <b>
 Relaunch</b> from the process's pop-up menu.</P>
   </li>
 </ul>
@@ -33,8 +33,8 @@ Or, to relaunch the most recent launch:</P>
 <ul>
   <li>
 <P CLASS="Para">
-In the Processes view menu bar, select <b>Debug</b> &gt; <b>Relaunch Last</b>, or 
-press <b>F10</b>.</P>
+From the menu bar <b>Run</b> &gt; <b>Run Last Launched (Ctrl+F11)</b>, or 
+<b>Run<b> &gt; <b>Debug Last Launched (F11)</b>.</P>
   </li>
 </ul>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
