--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-135.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-135.htm
@@ -21,7 +21,7 @@ Select a suspended thread or a stack frame in a suspended thread. </P>
 <P CLASS="Para">
 Click the <b> <SPAN CLASS="Label">
 Resume</SPAN></b>
- button in the Debug view toolbar (or press the <b>F8</b> key). The thread resumes its execution, and stack frames are no longer displayed for the thread.</P>
+ button in the Debug view toolbar (or press the <b>F8</b> key). The thread resumes its execution, and stack frames are no longer displayed for the thread, and the Variables view is cleared.</P>
   </li>
 </ol>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
