--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-142.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-142.htm
@@ -11,11 +11,11 @@
 <H1 CLASS="Head">
 Disconnecting from a VM</H1>
 <P CLASS="Para">
-To disconnect from a VM that was connected to with the Remote Java Application launcher:</P>
+To disconnect from a VM that was connected to with a Remote Java Application launch configuration:</P>
 <ol>
   <li>
 <P CLASS="Para">
-In the Debug view, select the VM.</P>
+In the Debug view, select the launch.</P>
   </li>
   <li>
 <P CLASS="Para">
