--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-144.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-144.htm
@@ -16,7 +16,7 @@ Line breakpoints are set on an executable line of a program.</P>
   <li>In the editor area, open the file where you want to add the breakpoint.</li>
   <li>
 <P CLASS="Para">
-Directly the left of the line where you want to add the breakpoint, open the 
+Directly to the left of the line where you want to add the breakpoint, open the 
 marker bar pop-up menu and select <b>Add Breakpoint. </b>A new breakpoint marker 
 appears on the marker bar, directly to the left of the line where you added the 
 breakpoint. Also, the new breakpoint appears in the Breakpoints view list.</P>
@@ -35,8 +35,7 @@ While the breakpoint is enabled, thread execution suspends before that line of c
 <a href="../tasks/tasks-147.htm">Catching Java exceptions</a><br>
 <a href="tdelbpts.htm">Deleting breakpoints</a><br>
 <a href="tendisbp.htm">Enabling and disabling breakpoints</a><br>
-<a href="../tasks/tasks-145.htm">Setting method 
-entry breakpoints</a> <br>
+<a href="../tasks/tasks-145.htm">Setting method breakpoints</a> <br>
 <a href="../tasks/tasks-136.htm">Stepping through 
 the execution of a program</a></p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
