--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-145.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-145.htm
@@ -4,23 +4,23 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Setting method entry breakpoints</title>
+<title>Setting method breakpoints</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">
-Setting method entry breakpoints</H1>
+Setting method breakpoints</H1>
 <P CLASS="Para">
-Method entry breakpoints can be set on methods of binary types.</P>
+Method breakpoints can be set on methods of binary types.</P>
 <ol>
   <li>
 <P CLASS="Para">
-Open the class in the Outline view, and select the method where you want to add a method entry breakpoint.</P>
+Open the class in the Outline view, and select the method where you want to add a method breakpoint.</P>
   </li>
   <li>
 <P CLASS="Para">
 From the method's pop-up menu, select <b> <SPAN CLASS="Label">
-Add Entry Breakpoint</SPAN></b>.</P>
+Add/Remove Method Breakpoint</SPAN></b>.</P>
   </li>
   <li>
 <P CLASS="Para">
@@ -28,7 +28,7 @@ A breakpoint appears in the Breakpoints view. If source exists for the class, th
   </li>
   <li>
 <P CLASS="Para">
-While the breakpoint is enabled, thread execution suspends when the method is entered, before any line in the method is executed.</P>
+While the breakpoint is enabled, thread execution suspends when the method is entered, before any line in the method is executed.  The breakpoint can be set to break on exit as well.  In the Breakpoints view, select the breakpoint and from the context menu toggle the Exit item.</P>
   </li>
 </ol>
 <P CLASS="Para">
