--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-146.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-146.htm
@@ -11,8 +11,8 @@
 <H1 CLASS="Head">
 Applying hit counts</H1>
 <P CLASS="Para">
-A hit count can be applied to line breakpoints and method entry breakpoints. When a hit count is applied to a breakpoint, the breakpoint suspends execution of a thread the 
-<i>n</i>th time it is hit, but never again, until it is re-enabled or the hit count is changed.</P>
+A hit count can be applied to line breakpoints, exception breakpoints, watchpoints and method breakpoints. When a hit count is applied to a breakpoint, the breakpoint suspends execution of a thread the 
+<i>n</i>th time it is hit, but never again, until it is re-enabled or the hit count is changed or disabled.</P>
 <ol>
   <li>
 <P CLASS="Para">
@@ -30,10 +30,7 @@ Enter the new hit count for the breakpoint</SPAN></b>
  field, type the number of times you want to hit the breakpoint before suspending execution.
 <br>
 <br>
-<b>Note:</b>	Entering <SPAN CLASS="Filename">
-0</SPAN>
- means that no hit count should be used (that is, suspend every time the breakpoint is hit).
-When the breakpoint is hit for the <i>n</i>th time, the thread that hit the breakpoint suspends.
+<b>Note:</b>	When the breakpoint is hit for the <i>n</i>th time, the thread that hit the breakpoint suspends.
 The breakpoint is disabled until either it is re-enabled or its hit count is changed.</P>
   </li>
 </ol>
@@ -43,8 +40,7 @@ The breakpoint is disabled until either it is re-enabled or its hit count is cha
 <p><a href="../tasks/tasks-144.htm">Adding breakpoints</a><br>
 <a href="../tasks/tdelbpts.htm">Deleting breakpoints</a><br>
 <a href="../tasks/tendisbp.htm">Enabling and disabling breakpoints</a><br>
-<a href="../tasks/tasks-145.htm">Setting method 
-entry breakpoints</a> </p>
+<a href="../tasks/tasks-145.htm">Setting method breakpoints</a> </p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
 <p><a href="../reference/ref-35.htm">Breakpoints view</a></p>
 <P>&nbsp;<br>
