--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-147.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-147.htm
@@ -16,8 +16,8 @@ It is possible to suspend the execution of thread when an exception is thrown by
   <li>
 <P CLASS="Para">
 In the Breakpoints view, click the <b> <SPAN CLASS="Label">
-Add Java Exception</SPAN></b>
- button. The Add Exception page opens</P>
+Add Java Exception Breakpoint</SPAN></b>
+ button or use the equivalent menu item in the context or Run menu. The Add Java Exception Breakpoint page opens.</P>
   </li>
   <li>
 <P CLASS="Para">
@@ -41,7 +41,7 @@ Uncaught</b></SPAN>
 </UL>
   </li>
 </ol>
-<P><b>Note:</b>	Exception breakpoints can be enabled and disabled like a regular breakpoint.</P>
+<P><b>Note:</b>	Exception breakpoints can be enabled and disabled and have hit counts set like a regular breakpoint.</P>
 
 
 
@@ -54,8 +54,7 @@ Uncaught</b></SPAN>
 <p dir="ltr"><a href="../tasks/tasks-134.htm">Suspending threads</a><br>
 <a href="../tasks/tendisbp.htm">Enabling and disabling breakpoints</a><br>
 <a href="../tasks/tasks-144.htm">Adding breakpoints</a><br>
-<a href="../tasks/tasks-145.htm">Setting method 
-entry breakpoints</a><br>
+<a href="../tasks/tasks-145.htm">Setting method breakpoints</a><br>
 &nbsp;</p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
 <p><a href="../reference/ref-35.htm">Breakpoints view</a></p>
