--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-149.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-149.htm
@@ -13,7 +13,7 @@ Creating a Java scrapbook page</H1>
 <P CLASS="Para">
 The scrapbook allows Java expressions, to be run, inspected, and displayed, under the control of the debugger. Breakpoints and exceptions are active as in a regular debug session.</P>
 <P CLASS="Para">
-A VM is launched for each scrapbook page in which expressions are being evaluated. The first time an expression is evaluated in a scrapbook page after it is opened, a VM is launched. The VM for a page will remain active until the page is closed, terminated explicitly (in the debugger), or when a <SPAN CLASS="Filename">
+A VM is launched for each scrapbook page in which expressions are being evaluated. The first time an expression is evaluated in a scrapbook page after it is opened, a VM is launched. The VM for a page will remain active until the page is closed, terminated explicitly (in the debugger or via the <SPAN CLASS="Label">Stop the Evaluation </SPAN> button in the editor toolbar), or when a <SPAN CLASS="Filename">
 System.exit()</SPAN>
  is evaluated.</P>
 <ol>
@@ -25,20 +25,20 @@ From the workbench window, do one of the following: </P>
 From the drop-down menu on the <b> <SPAN CLASS="Label">
 Open The New Wizard</SPAN></b>
  button in the workbench toolbar, select <b>Other</b>. Then select <b>Java</b> on the left, and on the right, select 
-<b>Java Scrapbook Page</b>. Then click <b> <SPAN CLASS="Label">
+<b>Scrapbook Page</b>. Then click <b> <SPAN CLASS="Label">
 Next</SPAN></b>.</LI>
 <LI CLASS="Item">
 Click the <b> <SPAN CLASS="Label">
 Open The New Wizard</SPAN></b>
  button; then in the left pane, select <b>Java</b>, and in the right pane, select 
-<b>Java Scrapbook Page</b>. Then click <b> <SPAN CLASS="Label">
+<b>Scrapbook Page</b>. Then click <b> <SPAN CLASS="Label">
 Next</SPAN></b>.</LI>
 <LI CLASS="Item">
 From the menu bar in the Java Perspective, select <b>File</b> &gt; <b>New</b> &gt; 
-<b>Java Scrapbook Page</b>.</LI>
+<b>Scrapbook Page</b>.</LI>
 <LI CLASS="Item">
 From the menu bar in any non-Java Perspective, select <b>File</b> &gt; <b>New</b> &gt; 
-<b>Other</b>. Then select <b>Java</b> on the left, and on the right, select <b>Java Scrapbook Page</b>. Then click
+<b>Other</b>. Then select <b>Java</b> on the left, and on the right, select <b>Scrapbook Page</b>. Then click
 <b> <SPAN CLASS="Label">
 Next</SPAN></b>.</LI>
 <LI CLASS="Item">
