--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-150.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-150.htm
@@ -28,7 +28,7 @@ Inspect</SPAN></b>
   </li>
   <li>
 <P CLASS="Para">
-The result of the inspection appears in the Inspector view, which opens if it is not already visible. </P>
+The result of the inspection appears in the Expressions view, which opens if it is not already visible. </P>
 <P CLASS="Para">
 The result can be inspected like a variable in the debugger (for example, children of the result can be expanded).</P>
   </li>
