--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-151.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-151.htm
@@ -15,7 +15,7 @@ Displaying shows the result of evaluating an expression in the scrapbook editor.
 <ol>
   <li>
 <P CLASS="Para">
-In the scrapbook page, either type an expression or highlight an existing expression to be inspected. For example:
+In the scrapbook page, either type an expression or highlight an existing expression to be displayed. For example:
 <font face="Courier New">System.getProperties()</font></P>
   </li>
   <li>
@@ -28,7 +28,7 @@ Display</SPAN></b>
   </li>
   <li>
 <P CLASS="Para">
-The result of the inspection appears highlighted in the scrapbook editor. </P>
+The result of the evaluation appears highlighted in the scrapbook editor. </P>
 <P CLASS="Para">
 The result displayed is either</P>
 <UL CLASS="UnorderedList">
