--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-152.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-152.htm
@@ -21,7 +21,7 @@ For example, if you type and highlight <font face="Courier New"> <SPAN CLASS="Fi
 System.out.println(&quot;Hello World&quot;</SPAN></font>, and click the <b> <SPAN CLASS="Label">
 Run</SPAN></b> button, <font face="Courier New"> <SPAN CLASS="Filename">
 Hello World</SPAN></font>
- appears in the Console view, but no result is displayed in the scrapbook editor or the Inspector view.</P>
+ appears in the Console view, but no result is displayed in the scrapbook editor or the Expressions view.</P>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
 <p><a href="../concepts/concepts-6.htm">Java views</a></p>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
