--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-120.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-120.htm
@@ -15,7 +15,7 @@ The default JRE is used for compiling and launching Java programs in all project
 <ol>
   <li>
 <P CLASS="Para">
-From the menu bar, select <b>Workbench</b> &gt; <b>Preferences</b>.</P>
+From the menu bar, select <b>Window</b> &gt; <b>Preferences</b>.</P>
   </li>
   <li>
 <P CLASS="Para">
@@ -31,9 +31,8 @@ Click <b> <SPAN CLASS="Label">
 OK</SPAN></b>.</P>
   </li>
 </ol>
-<p><b>Note</b>:	The JRE_LIB, JRE_SRC and JRE_SRCPATH system variables are automatically updated when you change the default JRE. This may cause a build to occur when you have autobuild enabled (<b>Workbench</b> &gt; 
-<b>Preferences</b> &gt; <b>Workbench</b>). A preview of the new values is shown in the lower part of the Installed JREs 
-Preferences page.</p>
+<p><b>Note</b>:	The JRE_LIB, JRE_SRC and JRE_SRCROOT system variables are automatically updated when you change the default JRE. This may cause a build to occur when you have autobuild enabled (<b>Window</b> &gt; 
+<b>Preferences</b> &gt; <b>Workbench</b>).</p>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
 <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
