Screenshot and accessibility update

--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-25.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-25.htm
@@ -35,8 +35,8 @@ for finding, downloading, and installing new features.
 <a href="../tasks/tasks-38.htm">Specifying the number of installation histories</a><br>
 </P>
 
-<P><img src ="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. 2000,2002" width="195" height="12">
-</P>
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a>
+
 
 
 </BODY>
