--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-26.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-26.htm
@@ -28,7 +28,7 @@ are made, and access the work of others as the project evolves.</p>
   are up to date.</p>
   <div CLASS="Figure">
     <div>
-      <map NAME="ref-9"></map><img SRC="../images/ref-9.gif" USEMAP="#ref-9" alt=" " width="344" height="183">
+      <map NAME="ref-9"></map><img SRC="../images/ref-9.gif" USEMAP="#ref-9" alt="Interaction with Streams and Workbenches" width="344" height="183">
     </div>
   </div>
   <div CLASS="XRefList">
@@ -126,7 +126,8 @@ Versioning projects in the stream</a>
 
 
 <p>
-<img src="../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000, 2001" width="195" height="12"></p>
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a>
+</p>
 
 
 </BODY>
