--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-27.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-27.htm
@@ -74,7 +74,8 @@ Automatic version labeling schema</a><br>
 
 
 <P><br>
-<img src = "../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000,2001" width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a>
+
 </P>
 
 
