--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-27b.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-27b.htm
@@ -74,7 +74,8 @@ Streams in CVS</a>
 </p>
 
 
-<p><img src = "../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000,2001" width="195" height="12">
+<p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a>
+
 </p>
 
 
