--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-27v.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-27v.htm
@@ -19,7 +19,7 @@ them. </p>
 locations and add news streams to repositories. Use the Repositories view to add
 resources from the repository to the workbench, edit files in the repository,
 view resource history, and compare resource versions. </p>
-<p CLASS="Para"><img align="texttop" border="0" src="../images/Image242_repo_view.jpg" alt="Picture of the Repositories view, which is a tree view showing 1 repository and the groups of project versions and streams that are under it." width="405" height="218"></p>
+<p CLASS="Para"><img align="texttop" border="0" src="../images/Image242_repo_view.jpg" alt="Picture of the Repositories view, which is a tree view showing 1 repository and the groups of project versions and streams that are under it." ></p>
 <p CLASS="Para">Like other views in the workbench, the Repositories view has its
 own toolbar. Toolbar buttons are provided for refreshing the view and for
 navigating. </p>
@@ -46,7 +46,8 @@ Viewing the history of a stream resource</a>
 
 
 <p CLASS="Para">
-<img src = "../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000,2001" width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a>
+
 </p>
 
 
