--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-28.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-28.htm
@@ -58,7 +58,8 @@ Three versions of a resource can be compared</LI>
 </blockquote>
 <p>The result of any compare will appear in a compare editor.&nbsp;&nbsp;</p>
 <P>&nbsp;<br>
-<img src = ../ngibmcpy.gif width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a>
+
 </P>
 
 
