--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-29.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-29.htm
@@ -28,7 +28,7 @@ determined, for example because a resource with the same name and path was
 created and released by two different developers, the comparison becomes a
 two-way comparison.) </P>
 <P CLASS="Para" Label=Type>
-<img align="texttop" border="0" src="../images/Image271_compare3.jpg" alt=" Picture of comparison editor. Top pane compares project structure; second pane from top shows a source file; below that 2 other panes show 2 other source files. Discrepancies are highlighted." width="463" height="378"> </P>
+<img align="texttop" border="0" src="../images/Image271_compare3.jpg" alt=" Picture of comparison editor. Top pane compares project structure; second pane from top shows a source file; below that 2 other panes show 2 other source files. Discrepancies are highlighted." > </P>
 <P CLASS="Para" Label=Type>
 The common ancestor is displayed in the top pane of the text compare pane.&nbsp;
 The differences that you  see highlighted are what has  changed in the
@@ -55,7 +55,8 @@ Comparing resources with repository versions</a>
 
 
 <P CLASS="Para" Label=Type>
-<img src = "../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000,2001" width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a>
+
 </P>
 
 
