--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-3.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-3.htm
@@ -19,7 +19,8 @@ what appears in certain menus and tool bars.&nbsp; More than one workbench windo
 on the desktop at any given time.</P>
 </DIV>
 <P>&nbsp;<br>
-<img src = ../ngibmcpy.gif width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a>
+
 </P>
 
 
