--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-30b.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-30b.htm
@@ -14,7 +14,7 @@ Synchronize view</H1>
 This view allows you to catch up resources in the workbench and release resources
 from the workbench to a stream.&nbsp;Here is what the Synchronize view looks like:</P>
 <P>
-<img align="texttop" border="0" src="../images/Image245_sync_view.jpg" alt=" Picture of 3-paned editor. Top pane compares project structure; bottom 2 panes (side by side) compare lines of source." width="467" height="374"></P>
+<img align="texttop" border="0" src="../images/Image245_sync_view.jpg" alt=" Picture of 3-paned editor. Top pane compares project structure; bottom 2 panes (side by side) compare lines of source." ></P>
 <h2>
 Modes</h2>
 <P>
@@ -86,7 +86,8 @@ Releasing resources to the stream</a><a href="../tasks/tasks-68.htm"><br>
 </p>
 
 
-<p><img src = "../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000,2001" width="195" height="12">
+<p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+
 </P>
 
 
