--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-31.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-31.htm
@@ -23,7 +23,7 @@ that are made in the comparison editor.</P>
 Here is how the comparison editor looks when you compare two files. (In this
 example, all of the lines are highlighted because none of them match.) </P>
 <P CLASS="Para">
-<img align="texttop" border="0" src="../images/Image234_cmp_another.jpg" alt="  Picture of two edit panes, side by side, with all lines of text highlighted." width="447" height="275"> </P>
+<img align="texttop" border="0" src="../images/Image234_cmp_another.jpg" alt="Picture of two edit panes, side by side, with all lines of text highlighted." width="548" height="268"> </P>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
 <a href="concepts-30b.htm">Synchronize view<br>
 </a><a href="concepts-29.htm">Three-way comparisons</a></p>
@@ -41,7 +41,8 @@ Setting preferences for comparing files</a>
 
 
 <P CLASS="Para" Label=Type>
-<img src = "../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000,2001" width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a>
+
 </P>
 
 
