--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-32.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-32.htm
@@ -21,7 +21,8 @@ workbench.&nbsp; You can narrow the search by specifying only certain file types
 to be used in the search.&nbsp;&nbsp; </P>
 </DIV>
 <P>&nbsp;<br>
-<img src = ../ngibmcpy.gif width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+
 </P>
 
 
