--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-6.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-6.htm
@@ -35,8 +35,8 @@ changes.&nbsp;&nbsp; </P>
 but you can choose to tile them in order to view source files simultaneously.</P>
 <P CLASS="Para" Label=Type>
 Here is an example of a text editor in the workbench:</P>
-<P CLASS="Para" Label=Type>
-<img align="texttop" border="0" src="../images/Image5_text_editor.jpg" alt="  " width="643" height="496"></P>
+<P CLASS="Para" Label=Type> 
+<img align="texttop" border="0" src="../images/Image5_text_editor.jpg" alt="Text editor"></P>
 <P>&nbsp;The gray border at the left margin of the editor area might contain
 icons that flag errors, warnings, or problems detected by the system. Icons also
 appear if you have created bookmarks, added breakpoints for debugging, or
@@ -61,7 +61,8 @@ Navigator view</a></p>
 
 
 <P>
-<img src = "../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000,2001" width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+
 </P>
 
 
