--- a/bundles/org.eclipse.platform.doc.user/concepts/cpropview.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/cpropview.htm
@@ -14,7 +14,7 @@ Properties view</H1>
 This view displays property names and basic properties of a selected resource.
 Here is an example:</P>
 <P CLASS="Para">
-<img align="texttop" border="0" src="../images/Image240_props_view.jpg" width="327" height="197" alt="Picture of a Properties sheet with 3 columns, including a column for property and a column for value."></P>
+<img align="texttop" border="0" src="../images/Image240_props_view.jpg"  alt="Picture of a Properties sheet with 3 columns, including a column for property and a column for value."></P>
 <P CLASS="Para">Toolbar buttons allow you to toggle whether to display
 properties by category and whether to filter advanced properties. Another
 toolbar button allows you to restore the selected property to its default value.</P>
@@ -25,7 +25,8 @@ Properties from the pop-up menu.
 
 
 <P>&nbsp;<br>
-<img src = "../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000,2001" width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a>
+
 </P>
 
 
