--- a/bundles/org.eclipse.platform.doc.user/concepts/crhview.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/crhview.htm
@@ -16,7 +16,7 @@ This view provides a list of all the versions of a resource in the repository.
 From this view you can compare two versions, add a version to the workbench, or
 open an editor on a version.<P CLASS="Para">Here is what the Resource
 History View looks like:</P>
-<P CLASS="Para"><img align="texttop" border="0" src="../images/Image216_history_view.jpg" alt=" " width="413" height="149"></P>
+<P CLASS="Para"><img align="texttop" border="0" src="../images/Image216_history_view.jpg" alt="CVS Resource History View"></P>
 <P CLASS="Para">For each resource, the following is displayed in the table.</P>
 <DIV CLASS="Topic">
 <h2>
@@ -55,7 +55,8 @@ Local history</a>
 </P>
 
 
-<P><img src = "../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000,2001" width="195" height="12">
+<P><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a>
+
 </P>
 
 
