--- a/bundles/org.eclipse.platform.doc.user/concepts/csearchview.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/csearchview.htm
@@ -14,7 +14,7 @@ types) specified in the search dialog.</p>
 <p class="Para">
 Here is what the Search view looks like:</p>
 <p class="Para">
-<img align="Texttop" border="0" src="../images/Image237_search_view.jpg" width="447" height="200"></p>
+<img align="Texttop" border="0" src="../images/Image237_search_view.jpg" alt="Search View"></p>
 <p class="Para">
 &nbsp;</p>
 <div class="Topic">
@@ -61,7 +61,7 @@ search from the drop-down menu or clear the search history.</p>
 
 
 <p><br>
-<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" ></a>
 </p>
 
 
