--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/fontsandcolors.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/fontsandcolors.htm
@@ -16,7 +16,7 @@ one set in the Message Box settings of the properties. However, operating
 systems do not provide enough colors to handle all of the extra information that
 color and fonts provide in Eclipse.&nbsp;</p>
 <h2>Fonts</h2>
-<p>&lt;**Insert screenshot of New Project Wizard**&gt;</p>
+<p><img border="0" src="../../images/accessibility_new_project.gif" alt="New Project Wizard" ></p>
 <p>There are 3 main fonts in use by the Eclipse platform. They are</p>
 <ul>
   <li>Banner Font: Used in PDE editors, welcome pages and in the title area of
