--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-27a.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-27a.htm
@@ -25,7 +25,8 @@ Global Ignores</li>
 </ul>
 </DIV>
 <P>&nbsp;<br>
-<img src = ../ngibmcpy.gif width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a>
+
 </P>
 
 
