--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-4.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-4.htm
@@ -1,1 +1,47 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Perspectives</title></HEAD><BODY BGCOLOR="#ffffff"><H1 CLASS="Head">Perspectives</H1><p CLASS="Para" Label="Type">Each workbench window contains one or moreperspectives. A perspective defines the initial set and layout of viewsin the workbench window. Each perspective provides a set of capabilities aimedat accomplishing a specific type of task or working with specific types ofresources.&nbsp;For example, the Java perspective combines views that you wouldcommonly use while editing Java source files, while the Debug perspectivecontains the views that you would use while debugging Java programs. As you workin the workbench, you will probably switch perspectives frequently.</p><P CLASS="Para" Label=Type>Perspectives control what appears in certain menusand toolbars. They define visible <i> action sets</i>, which youcan change to customize a perspective. You can save a perspective that youbuild in this manner, making your own custom perspective that you can open againlater.&nbsp;&nbsp;</p><P CLASS="Para" Label=Type>You can set your workbench preferences to openperspectives in the same window or in a new window.</p><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts." width="159" height="27"><br><a href="concepts-2.htm">The workbench<br></a><a href="concepts-5.htm">Views</a><a href="concepts-7.htm"><br>Action sets</a></p><P CLASS="Para" Label=Type><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="../tasks/tasks-9f.htm"><br>Opening perspectives<br></a><a href="../tasks/tasks-3.htm">Opening views</a><br><a href="../tasks/tasks-24.htm">Changing where perspectives open<br></a><a href="../tasks/tasks-31.htm">Specifying the default perspective</a><br><a href="../tasks/tasks-28.htm">Switching between perspectives</a><br><a href="../tasks/tasks-9k.htm">Configuring perspectives</a><br><a href="../tasks/tasks-9i.htm">Saving a user-defined perspective</a><a href="../tasks/tasks-9j.htm"><br>Resetting perspectives</a></p><P>&nbsp;<br><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. 2000,2002" width="195" height="12"></P></BODY></HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
+<HEAD>
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
+<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+
+<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
+<title>Perspectives</title>
+</HEAD>
+<BODY BGCOLOR="#ffffff">
+<H1 CLASS="Head">
+Perspectives</H1>
+<p CLASS="Para" Label="Type">Each workbench window contains one or more
+perspectives. A perspective defines the initial set and layout of views
+in the workbench window. Each perspective provides a set of capabilities aimed
+at accomplishing a specific type of task or working with specific types of
+resources.&nbsp;For example, the Java perspective combines views that you would
+commonly use while editing Java source files, while the Debug perspective
+contains the views that you would use while debugging Java programs. As you work
+in the workbench, you will probably switch perspectives frequently.</p>
+<P CLASS="Para" Label=Type>Perspectives control what appears in certain menus
+and toolbars. They define visible <i> action sets</i>, which you
+can change to customize a perspective. You can save a perspective that you
+build in this manner, making your own custom perspective that you can open again
+later.&nbsp;&nbsp;</p>
+<P CLASS="Para" Label=Type>You can set your workbench preferences to open
+perspectives in the same window or in a new window.</p>
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts." width="159" height="27"><br>
+<a href="concepts-2.htm">The workbench<br>
+</a><a href="concepts-5.htm">Views</a><a href="concepts-7.htm"><br>
+Action sets</a></p>
+<P CLASS="Para" Label=Type><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="../tasks/tasks-9f.htm"><br>
+Opening perspectives<br>
+</a><a href="../tasks/tasks-3.htm">Opening views</a><br>
+<a href="../tasks/tasks-24.htm">Changing where perspectives open<br></a>
+<a href="../tasks/tasks-31.htm">Specifying the default perspective</a><br>
+<a href="../tasks/tasks-28.htm">Switching between perspectives</a><br>
+<a href="../tasks/tasks-9k.htm">Configuring perspectives</a><br>
+<a href="../tasks/tasks-9i.htm">Saving a user-defined perspective</a><a href="../tasks/tasks-9j.htm"><br>
+Resetting perspectives</a></p>
+<P>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+
+</P>
+
+
+</BODY>
+</HTML>
